theme_essential: Fix calendar block spacing

--- a/style/custom.css
+++ b/style/custom.css
@@ -393,6 +393,11 @@ body .course-content ul.weeks li.section.hidden {
     text-shadow: rgba(255, 255, 255, 0.498039) 0px 1px 0px;
 }
 
+/* Fix calendar block spacing */
+.block .minicalendar {
+    margin-bottom: 8px;
+}
+
 /* Fix RSS block spacing and borders */
 .block_rss_client .content {
     padding: 4px 0;
